src/test/ui/associated-types/associated-types-binding-to-type-defined-in-supertrait.stderr
error[E0271]: type mismatch resolving `<ModelT as Vehicle>::Color == Blue`
  --> $DIR/associated-types-binding-to-type-defined-in-supertrait.rs:31:10
   |
LL | impl Vehicle for ModelT { type Color = Black; }
   |                                        ----- expected this to be `Blue`
...
LL | fn blue_car<C:Car<Color=Blue>>(c: C) {
   |                   ---------- required by this bound in `blue_car`
...
LL | fn b() { blue_car(ModelT); }
   |          ^^^^^^^^ type mismatch resolving `<ModelT as Vehicle>::Color == Blue`

error[E0271]: type mismatch resolving `<ModelU as Vehicle>::Color == Black`
  --> $DIR/associated-types-binding-to-type-defined-in-supertrait.rs:32:10
   |
LL | impl Vehicle for ModelU { type Color = Blue; }
   |                                        ---- expected this to be `Black`
...
LL | fn black_car<C:Car<Color=Black>>(c: C) {
   |                    ----------- required by this bound in `black_car`
...
LL | fn c() { black_car(ModelU); }
   |          ^^^^^^^^^ type mismatch resolving `<ModelU as Vehicle>::Color == Black`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
